# probe

./: README.md  example_outputs.md  pyproject.toml
data/: generate.py  sales_data.csv
examples/: salesa_data.py
src/probe/: __init__.py  app.py  main.py  prompts.py
tests/: test_queries.py
