[project]
name = "probe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Luciano Scarpulla", email = "scarpulla53@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.34.2",
    "ell-ai[anthropic]>=0.0.14",
    "narwhals>=1.10.0",
]

[project.scripts]
probe = "probe.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "inline-snapshot>=0.13.3",
    "ipykernel>=6.29.5",
    "polars>=1.11.0",
    "pytest>=8.3.3",
]
